syntax = "proto3";

import "tracing/proto/tracing.proto";

option go_package = "sigmaos/rpcbench/proto";

service RPCBenchSrv {
  rpc Sleep(SleepRequest) returns (SleepResult);
}

message SleepRequest {
  int64 durMS = 1;
  SpanContextConfig spanContextConfig = 2;
}

message SleepResult {
  repeated string hotelIds = 1;
}
